Views are added...

--- a/eTicketMVC/eTicketMVC/Properties/launchSettings.json
+++ b/eTicketMVC/eTicketMVC/Properties/launchSettings.json
@@ -11,6 +11,8 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      //HomeController is deleted. Now Movies/Index is our default page
+      "launchUrl": "Movies",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
